# cued

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  PRM.md  README.md  ROADMAP.md  SECURITY.md  afk-ralph-linkedin.sh  afk-ralph.sh  biome.json  conductor.json  mobile-prd.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.json  progress.txt  ralph-once.sh  tsconfig.base.json  tsconfig.build.json  tsconfig.json  turbo.json
.githooks/: pre-commit
.github/: pull_request_template.md
.husky/: pre-commit
archive/backend/: contact_sync.py  pyproject.toml  utils.py
archive/backend/routers/: __init__.py  attachments.py  chats.py
archive/backend/tests/: test_actions.py  test_contacts.py  test_eod.py  test_search.py
archive/core/: Cargo.toml  imessage_db_notes.md
archive/core/src/: lib.rs
archive/core/src/macos/: contacts.rs  mod.rs
backend/: contact_sync.py  create_mock_data.py  deps.py  embedding_worker.py  main.py  pyproject.toml  schemas.py  services.py  sync_contacts.py  sync_db.py  test.py  test_group.py
backend-2/: config.py  dependencies.py  main.py  pyproject.toml
backend-2/db/: __init__.py  models.py  prm_db.py  sync.py
backend-2/routers/: actions.py  attachments.py  chats.py  contacts.py  eod.py  search.py  sync.py
backend-2/scripts/: test_search.py
backend-2/search/: __init__.py  fts.py  fusion.py  models.py
backend-2/services/: attributed_body.py
backend-2/services/actions/: message_filter.py  priority.py
backend-2/services/attachments/: __init__.py  service.py
backend-2/services/macos/: contacts.py
backend-2/services/search/: __init__.py  fusion.py  semantic.py
backend-2/tests/: __init__.py  conftest.py  test_actions.py  test_db.py  test_macos_services.py  test_search.py
backend-2/workers/: registry.py  scheduler.py
backend-2/workers/jobs/: __init__.py  embedding_batch.py  llm_processor.py  message_sync.py
backend/db/: __init__.py  chat_db.py  models.py  prm_db.py  sync.py
backend/routers/: __init__.py  actions.py  attachments.py  chats.py  contacts.py  conversations.py  eod.py  search.py  sync.py
backend/services/: __init__.py  contacts_sync.py  llm_client.py  message_filter.py
backend/services/actions/: __init__.py  llm_client.py  message_filter.py
backend/services/contacts/: __init__.py  handle_lookup.py  resolver.py
backend/services/macos/: __init__.py  contacts.py  messaging.py  notifications.py
backend/services/search/: fts.py  semantic.py
backend/tests/: conftest.py  test_actions.py  test_api.py  test_attachments.py  test_db.py  test_embedding_worker.py  test_llm_client.py  test_macos_services.py  test_message_filter.py  test_search.py  test_utils.py
backend/utils/: phone.py
backend/workers/: __init__.py  registry.py  scheduler.py
backend/workers/jobs/: contacts_sync.py  deletion_scan.py  llm_cleanup.py  llm_processor.py  prm_sync.py  text_sync.py  unanswered_scan.py
core/: Cargo.toml
core/src/: app_db.rs  apple_time.rs  chat_reader.rs  contacts.rs  lib.rs  messaging.rs  models.rs  normalize.rs  sync_watcher.rs  utils.rs
core/src/db/: imessage_reader.rs  mod.rs  prm_db.rs
core/src/macos/: mod.rs
core/src/sync/: mod.rs  watcher.rs
docs/: ARCHITECTURE.md  DiscoverabilityLayer.md  Plan.md  PlanV2.md  PlanV3.md  agents.md  development.md  installing.md  integration-policy.md  launch-responsiveness.md  local-cued-v2-spec.md
frontend/: README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.1767844558493.mjs  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
llm/: Package.resolved  Package.swift
nango-integrations/: .env.example  DEPLOY.md  index.ts  package-lock.json
prds/: PRM.md  linkedin-prd.json  linkedin-progress.txt  mobile-prd.json  prd.json  prm-38-prd.json  prm-44-cloud-cursors-prd.json  (+9 more)
(+897 files in other folders)
