[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
chrono = "0.4.42"
plist = "1.8.0"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[features]
default = []
extension-module = ["pyo3/extension-module"]
